--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   <section id="kontak">
     <h2>Kontak Kami</h2>
     <p style="text-align: center;">
-      Alamat: <a href="https://maps.app.goo.gl/ycXAxA2MhfaZB6dg9?g_st=com.google.maps.preview.copy " target="_blank">Lihat di Google Maps</a><br>
+      Alamat: <a href="https://maps.app.goo.gl/ZFjErfHujzFn9nxm7?g_st=com.google.maps.preview.copy" target="_blank">Lihat di Google Maps</a><br>
       Email: beautixie.id@gmail.com<br>
       Instagram: <a href="https://instagram.com/beautixie.id" target="_blank">@beautixie.id</a><br>
       WhatsApp: <a href="https://wa.me/6281260121578">chat disini</a><br>
