--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <nav>
     <a href="#beranda">Beranda</a>
     <a href="#tentang">Tentang Kami</a>
-    <a href="#product">product</a>
+    <a href="#product">Product</a>
     <a href="#testimoni">Testimoni</a>
     <a href="#galeri">Galeri</a>
     <a href="#kontak">Kontak</a>
@@ -201,7 +201,7 @@
         <button onclick="window.open('https://wa.me/6281260121578', '_blank')">Beli Sekarang</button>
       </div>
  <div class="card">
-<img src="Cleansing.jpeg" alt="Gentle Facial Wash Avoskin" width="350">
+<img src="cleansing.jpeg" alt="Gentle Facial Wash Avoskin" width="350">
         <h3>Gentle Facial Wash Avoskin</h3>
         <p>Natural Sublime Facial Cleanser.</p>
         <p><strong>Rp70.000</strong></p>
